--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/mbolters/FriendFinder#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "material": "^0.4.1",
+    "materialize": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "node": "^12.12.0",
     "path": "^0.12.7"
